work with js and jquery

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
       <meta name="description" content="My first work">
       <meta name="author" content="Yulia Chyzh">
       <link href="style.css" rel="stylesheet">
+      <script src="script.js"></script>
   </head>
   <body>
       <header>
