--- a/pageforcards.html
+++ b/pageforcards.html
@@ -16,9 +16,9 @@
         <div id="half1_of_bigblock">
           <div id="part_of_half1"></div>
           <div id="content">
-            <div id="rectangle1">&hearts;</div>
+            <div class="rectangle1" id="rec1">&hearts;</div>
             <div id="rectangle">&spades;</div>
-            <div id="rectangle1">&diams;</div>
+            <div class="rectangle1" id="rec3">&diams;</div>
           </div>
         </div>
         <div id="half2_of_bigblock">
@@ -38,6 +38,10 @@
           <p>Виконала студентка групи ІП-54 <a href="mailto:yulia_yulia01@ukr.net">Чиж Юлія</a>.</p>
         </address>
       </footer>
+
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
+      <script src="cardscript.js"></script>
+
 
 
   </body>
