Fixing some bags, adding db and php

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
       <title>Фотогалерея</title>
       <meta name="description" content="My first work">
       <meta name="author" content="Yulia Chyzh">
-      <link href="style.css" rel="stylesheet">
-      <script src="script.js"></script>
+      <link href="css/style.css" rel="stylesheet">
+      <script src="js/script.js"></script>
   </head>
   <body>
       <header>
