--- a/pagefortable.html
+++ b/pagefortable.html
@@ -5,8 +5,8 @@
       <title>Фотогалерея</title>
       <meta name="description" content="My first work">
       <meta name="author" content="Yulia Chyzh">
-      <link href="style.css" rel="stylesheet">
-      <link href="table.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
+      <link href="css/table.css" rel="stylesheet">
   </head>
   <body>
       <header>
