--- a/table.html
+++ b/table.html
@@ -6,7 +6,7 @@
   <title>Table</title>
   <meta name="description" content="My first table">
   <meta name="author" content="Yulia Chyzh">
-  <link href="table.css" rel="stylesheet">
+  <link href="css/table.css" rel="stylesheet">
 </head>
 <body>
   <table  bgcolor='#ffffff' cellpadding='0' cellspacing='0' border='2' bordercolor='#000000' align='center' width='70%'>
