--- a/Feed.html
+++ b/Feed.html
@@ -5,7 +5,7 @@
 	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vilka.com</title>
-    <link rel="stylesheet" type="text/css" href="mainFeed.css">
+    <link rel="stylesheet" type="text/css" href="css/mainFeed.css">
 </head>
 
 
@@ -15,7 +15,7 @@
 	</header>
 
     <div class="Feedback">
-    	<form method="post" id="form">
+    	<form action="index.php" method="post" id="form" name="form">
 				<label for="name">Ім'я:</label>
 				<input type="text" name="name" placeholder="Ім'я" id="name" /> <br /> <br />
 				<label for="email">E-mail:</label>
@@ -23,7 +23,7 @@
 				<label for="tel">Номер телефону:</label>
 				<div class="codeCountry"><input type="text" name="tel" placeholder="(___) ___ __ __" id="user_phone"/></div> <br /> <br />
 				<label for="hour">Час доставки:</label>
-				<div class="time"><select name="hourSelect"> <option>Виберіть час доставки</option>
+				<div class="time"><select name="hourSelect"> <option value="no">Виберіть час доставки</option>
 							<option>1</option>
 							<option>2</option>
 							<option>3</option>
@@ -50,10 +50,10 @@
 							<option>24</option>
 					</select>
 				</div> <br /> <br />
-
+				<input class="submit" type="submit" name="update" value="Відправити" >
+				<input class="submit" type="submit" name="show_site" value="Сайт" >
+				<input class="submit" type="submit" name="show_gallery" value="Фотогалерея" >
 			</form> <br />
-
-			<button class="btn_submit">Send</button>
 
 			<div class="uncorrect tel">
 					Your number is uncorrect!
@@ -67,6 +67,10 @@
 					Your first letter in name is uncorrect!
 			</div>
 
+			<div class="uncorrect hour">
+					Your time is uncorrect!
+			</div>
+
     </div>
 
 		<footer>
@@ -76,8 +80,8 @@
 		</footer>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <script src="script.js"></script>
-    <script src="jquery.maskedinput.min.js"></script>
+    <script src="js/script.js"></script>
+    <script src="js/jquery.maskedinput.min.js"></script>
 
 </body>
 </html>
