--- a/pageforcards.html
+++ b/pageforcards.html
@@ -5,8 +5,8 @@
       <title>Фотогалерея</title>
       <meta name="description" content="My first work">
       <meta name="author" content="Yulia Chyzh">
-      <link href="card.css" rel="stylesheet">
-      <link href="style.css" rel="stylesheet">
+      <link href="css/card.css" rel="stylesheet">
+      <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
       <header>
@@ -40,7 +40,7 @@
       </footer>
 
       <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-      <script src="cardscript.js"></script>
+      <script src="js/cardscript.js"></script>
 
 
 
